# algoworld-swapper

./: .gitignore  .pre-commit-config.yaml  .swcrc  .vercelignore  CLONE.md  LICENSE.header.md  LICENSE.md  README.md  clone.json  clone_before.json  decs.d.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  post_clone.json  pyproject.toml  renovate.json  sentry.client.config.js  sentry.properties  sentry.server.config.js  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml  codeql-analysis.yml  e2e.yml  preview.yml  release.yml  repo-stats.yml  repo_stats.yml
.husky/: pre-commit
api/: README.md  compile_swap.py
api/storage/: package-lock.json  package.json  save-configurations.ts  saveConfigurations.ts  storeConfiguration.ts  validate-hash.ts
api/swappers/: common.py  compile-asa-to-asa.py  compile-asas-to-algo.py  compile-swap-proxy.py  compileMultiSwap.py  compileSwap.py  compileSwapProxy.py  compile_swap.py  compile_swap_proxy.py  get-swap-configurations.py  requirements.txt
api/swaps/: _common.py  compile-asa-to-asa.py  compile-asas-to-algo.py  compile-swap-proxy.py  get-swap-configuration.py  get-swap-configurations.py  requirements.txt  test.json
api_utils/: utils.py
e2e/: common.ts  consts.ts  tsconfig.json
e2e/pages/: dashboard.spec.ts  public-swaps.spec.ts
public/: manifest.json
src/__utils__/: renderWithProviders.tsx
src/common/: api.ts  constants.ts  stack.ts
src/components/: AssetAmountPickerCard.tsx  AssetAmountPickerTable.tsx  AssetCarouselViewer.tsx  (+14 more)
(+209 files in other folders)
