[tool.poetry]
name = "algoworld-swapper"
version = "0.1.0"
description = ""
authors = ["MillionAlgosFather <info@algoworld.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
algoworld-contracts = {git = "https://github.com/algoworldnft/algoworld-contracts", rev = "feature/swap_proxy"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
